--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.2",
     "next": "13.4.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-imask": "^7.1.0-alpha.0",
+    "react-phone-number-input": "^3.3.0",
+    "styled-components": "^6.0.2",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "cypress": "^12.8.1",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
